Resolves: fdo#58094 don't crash on attempting mml import

Change-Id: I812f2b3e333ea59e9ebfc75a854faca050af8711